src/objects/MP_Score_per_Object__c.object
<CustomObject>
    <description>Contains a score per MP per Object</description>
    <fields>
        <fullName>Activity__c</fullName>
        <description>What the MP did to get this score</description>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>EA_Campaign__c</referenceTo>
        <relationshipLabel>MP Scores per Object</relationshipLabel>
        <relationshipName>R00N7000000256AGEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>R00NS0000000I2u9MAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MP Score per Object</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>MP Score per Object ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP Scores per Object</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>